--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover"
-    />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>
-        We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-        properly without JavaScript enabled. Please enable it to
-        continue.
-      </strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <script>
-      let promiseResolver
-      window.googleMapReady = new Promise((resolve, reject) => {
-        promiseResolver = resolve
-      })
-      window.initMap = () => {
-        console.log("google map ready")
-        promiseResolver()
-      }
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+  <title><%= htmlWebpackPlugin.options.title %></title>
+</head>
+
+<body>
+  <noscript>
+    <strong>
+      We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+      properly without JavaScript enabled. Please enable it to
+      continue.
+    </strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+  <script>
+    let promiseResolver
+    window.googleMapReady = new Promise((resolve, reject) => {
+      promiseResolver = resolve
+    })
+    window.initMap = () => {
+      console.log("google map ready")
+      promiseResolver()
+    }
+  </script>
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfU46amwuQXkSnCkSwbjMuPSofV7w0PU0&callback=initMap">
     </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfU46amwuQXkSnCkSwbjMuPSofV7w0PU0&callback=initMap">
-    </script>
-  </body>
+</body>
+
 </html>
