--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+  <link rel="icon" type="image/png" sizes="196x196" href="favicon-196.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="apple-icon-167.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 
