--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" sizes="196x196" href="<%= BASE_URL %>img/icons/favicon-196.png">
   <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>img/icons/apple-icon-180.png">
   <link rel="apple-touch-icon" sizes="167x167" href="<%= BASE_URL %>img/icons/apple-icon-167.png">
